# focus-flow

./: .gitignore  DROPPED_OPPORTUNITIES.md  GMAIL_SETUP.md  HOW_TO_USE.md  INTEGRATION_GUIDE.md  LICENSE  META_PREP_URGENT.md  README.md  bandwidth_dashboard.html  dashboard.html  example_usage.py  gmail_job_router.py  job_hunt_demo.py  live_integration_example.py  mind_blowing_demo.py  pyproject.toml  send_test_alerts.sh  setup_real_data.py  webhook_server.py
docs/: cognitive_bandwidth_router.md
samples/: eval_results.json  incidents.csv  incidents.json  incidents_from_csv.json  optimization.json  policy_grid.json
src/cognitive_router/: __init__.py  alert_sources.py  attention.py  context.py  evaluator.py  event_bus.py  ingest.py  optimizer.py  router.py  simulation.py  task_models.py  telemetry.py  telemetry_sources.py  workflow.py
tests/: test_attention.py  test_context.py  test_evaluator.py  test_event_bus.py  test_ingest.py  test_optimizer.py  test_router.py  test_workflow.py
